--- a/STAT520_EXPL1+2_Mapping_Confidence_Intervals.ipynb
+++ b/STAT520_EXPL1+2_Mapping_Confidence_Intervals.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMhPVH0UMQHHmHR7SAKSKf2",
+      "authorship_tag": "ABX9TyPQEkbGCvGc/FIMEN/Qq0iD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -67,8 +67,7 @@
     {
       "cell_type": "code",
       "source": [
-        "import pandas as pd\n",
-        "import plotly.express as px"
+        "import pandas as pd"
       ],
       "metadata": {
         "id": "u9-GXarJwMfG"
