--- a/STAT520_EXPL1+2_Mapping_Confidence_Intervals.ipynb
+++ b/STAT520_EXPL1+2_Mapping_Confidence_Intervals.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPQEkbGCvGc/FIMEN/Qq0iD",
+      "authorship_tag": "ABX9TyNaQUKpt+0XxwXjSypW3/QN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,7 +40,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**INSTRUCTIONS**: Open this notebook using your Gmail account. Make a copy of your own and complete your work within the notebook. If you do not have a Gmail account, you can copy and edit your version of this notebook in RStudio, VSCode, or any other IDE you prefer. When you complete the assignment, please submit it here: [STAT 520 EXPLORATIONS S24]()."
+        "**INSTRUCTIONS**: Open this notebook using your Gmail account. Make a copy of your own and complete your work within the notebook. If you do not have a Gmail account, you can copy and edit your version of this notebook in RStudio, VSCode, or any other IDE you prefer. When you complete the assignment, please submit it here: [STAT 520 EXPLORATIONS S24](https://drive.google.com/drive/folders/1NK4lGHXIYsI6aUugnpUSmJIDiVOZ6BSd?usp=sharing)."
       ],
       "metadata": {
         "id": "MMYhzGtOt2f7"
