--- a/STAT520_EXPL1+2_Mapping_Confidence_Intervals.ipynb
+++ b/STAT520_EXPL1+2_Mapping_Confidence_Intervals.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyM+D5MIARHcfcDqjZzFDwrX",
+      "authorship_tag": "ABX9TyO2Bw8ieczg9z/kDgaFxc1N",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,7 +40,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**INSTRUCTIONS**: Open this notebook using your Gmail account. Make a copy of your own and complete your work within the notebook. If you do not have a Gmail account, you can copy and edit your version of this notebook in RStudio, VSCode, or any other IDE you prefer. When you complete the assignment, please submit it in **Canvas**."
+        "**INSTRUCTIONS**: Open this notebook using your Gmail account. Make a copy of your own and complete your work within the notebook. If you do not have a Gmail account, you can copy and edit your version of this notebook in RStudio, VSCode, or any other IDE you prefer. When you complete the assignment, please submit a link to your file in **Canvas**. Each of you will submit your work, but you are encouraged to work together on this."
       ],
       "metadata": {
         "id": "MMYhzGtOt2f7"
